--- a/package.json
+++ b/package.json
@@ -1,15 +1,16 @@
 {
-  "name": "@example/portfolio-svelte",
-  "version": "0.0.1",
-  "private": true,
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro build",
-    "preview": "astro preview"
-  },
-  "devDependencies": {
-    "astro": "^0.22.14",
-    "@astrojs/renderer-svelte": "^0.3.1"
-  }
+	"name": "@example/portfolio-svelte",
+	"version": "0.0.1",
+	"private": true,
+	"scripts": {
+		"dev": "astro dev",
+		"start": "astro dev",
+		"build": "astro build",
+		"preview": "astro preview"
+	},
+	"devDependencies": {
+		"@astrojs/renderer-svelte": "^0.3.1",
+		"astro": "^0.22.14",
+		"tailwindcss": "^3.0.15"
+	}
 }
