--- a/package.json
+++ b/package.json
@@ -12,7 +12,12 @@
 	"devDependencies": {
 		"@astrojs/renderer-svelte": "^0.3.1",
 		"astro": "^0.22.14",
+		"hast-util-select": "^5.0.1",
 		"prettier-plugin-astro": "^0.0.11",
+		"rehype-autolink-headings": "^6.1.1",
+		"rehype-slug": "^5.0.1",
+		"rehype-toc": "^3.0.2",
+		"remark-code-titles": "^0.1.2",
 		"tailwindcss": "^3.0.15"
 	}
 }
