--- a/package.json
+++ b/package.json
@@ -11,13 +11,15 @@
 	},
 	"devDependencies": {
 		"@astrojs/renderer-svelte": "^0.3.1",
-		"astro": "^0.22.14",
+		"@beyonk/svelte-scrollspy": "^2.1.2",
+		"astro": "^0.22.18",
 		"hast-util-select": "^5.0.1",
 		"prettier-plugin-astro": "^0.0.11",
 		"rehype-autolink-headings": "^6.1.1",
 		"rehype-slug": "^5.0.1",
 		"rehype-toc": "^3.0.2",
 		"remark-code-titles": "^0.1.2",
+		"svelte": "^3.46.2",
 		"tailwindcss": "^3.0.15"
 	}
 }
