--- a/package.json
+++ b/package.json
@@ -21,5 +21,10 @@
 		"remark-code-titles": "^0.1.2",
 		"svelte": "^3.46.2",
 		"tailwindcss": "^3.0.15"
+	},
+	"dependencies": {
+		"@sendgrid/mail": "^7.6.0",
+		"svelte-forms-lib": "^2.0.1",
+		"yup": "^0.32.11"
 	}
 }
